# Topological-freezing-in-SU2-3-simulations

./: .gitignore  CMakeLists.txt  README.md  run_simulation.sh  tests.ipynb
_Utility/: .gitignore  README.md
_Utility/include/: fields.hh  geometry.hh  io.hh  linear_algebra.hh  progressbar.hh  ranlux.hh  ranlxd.h  ranlxs.h  smearing_techniques.hh
_Utility/src/: fields.cc  io.cc  ranlux.cc  smearing_techniques.cc  smearing_techniques_all.cc
analysis/: Q_estimator.py  Q_statistics.py  analyze_topcharge.py  autocorrelation.py  plot_thermalization_su3.py  plot_topcharge.py  run_analysis.py  run_analysis_su3.py  topological_susceptibility.py
include/: Plaquette.hh  Wilson_loops.hh  instanton.hh  progressbar.hh  su3_heatbath.hh  su3_linear_algebra.hh  topcharge_su2.hh  topcharge_su3.hh
input/: instanton.txt  simulation.txt  simulation_su3.txt  topcharge_example.txt  topcharge_run.txt  topcharge_su3.txt
output/configs_su3/: conf_su3.0010  conf_su3.0020  conf_su3.0030  conf_su3.0040  conf_su3.0050  conf_su3.0060  conf_su3.0070  conf_su3.0080  conf_su3.0090  conf_su3.0100  conf_su3.0110  conf_su3.0120  conf_su3.0130  conf_su3.0140  conf_su3.0150  conf_su3.0160  conf_su3.0170  conf_su3.0180  conf_su3.0190  conf_su3.0200  conf_su3.0210  conf_su3.0220  conf_su3.0230  conf_su3.0240  conf_su3.0250  conf_su3.0260  conf_su3.0270  conf_su3.0280  conf_su3.0290  conf_su3.0300  conf_su3.0310  conf_su3.0320  conf_su3.0330  conf_su3.0340  conf_su3.0350  conf_su3.0360  conf_su3.0370  conf_su3.0380  conf_su3.0390  conf_su3.0400  (+10 more)
params/: example.conf
scripts/: build.sh  run_autocorr.sh  run_full_analysis.sh  run_heatbath.sh  run_instanton_Q.sh  run_tests.sh  run_topcharge.sh  step1_generate_configs.sh  step2_measure_topcharge.sh  step3_analysis.sh
src/: MC_heatbath.cc  MC_heatbath_su3.cc  compute_instanton_Q.cc  instanton.cc  meas_topcharge.c  meas_topcharge_su2.cc  meas_topcharge_su3.cc  run_configuration.c  topologicalcharge.c
tests/: test_heatbath.cc  test_linear_algebra.cc  test_plaquette.cc  test_smearing.cc  test_topcharge.cc
